# Defi_interestRate

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run_psi_check.py  setup.py  test_caching_performance.py  test_mgf_structure.py
.claude/: settings.json  settings.local.json
aave-ts/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
aave-ts/src/: fetchHistory.ts  fetchMarkets.ts  orchestrator.ts  params.ts  persist.ts  run.ts
config/: model_parameters.yaml
data/: USDC_AAVE_v3_Ethereum Mainnet_variableBorrowRate_avg.csv  USDT_AAVE_v3_Ethereum Mainnet_variableBorrowRate_avg.csv  WBTC_AAVE_v3_Ethereum Mainnet_variableBorrowRate_avg.csv  WETH_AAVE_v3_Arbitrum One_variableBorrowRate_avg.csv  WETH_AAVE_v3_Ethereum Mainnet_variableBorrowRate_avg.csv
data/AAVE/: aave_v2_dai_eth.parquet  aave_v2_usdc_eth.parquet  aave_v2_usdt_eth.parquet  aave_v2_weth_eth.parquet  aave_v3_dai_eth.parquet  aave_v3_usdc_eth.parquet  aave_v3_usde_eth.csv  (+3 more)
development/: test_monotonicity.py  test_radau_grid_solver.py
jobs/: _params.py  calibrate_btc_eth.py  calibrate_empirical.py  calibrate_kou.py  calibrate_wbtc_hourly.py  frontier_3d_only.py  frontier_analysis.py  h0_liquidation_report.py  numerical_comparison.py  sensitivity_analysis.py
jobs/OLD/: __init__.py  (+3 more)
jupyterNotebooks/: fetchRateData.ipynb  mean_reversion_test.ipynb
latex/: 20260420OLD_optimal_long_short.tex  Jagdish  Jagdish.pub  calibration_procedure_core_mle_bivariate_kou.md  definitions.tex  finance.bib  nat.sty  notes.aux  notes.bbl  notes.blg  notes.out  notes.pdfsync  notes.tex  notes.toc  notes_OLD_20250810.tex  optimal_deFi_notes.aux  optimal_deFi_notes.bbl  optimal_deFi_notes.blg  optimal_deFi_notes.fdb_latexmk  optimal_deFi_notes.fls  optimal_deFi_notes.out  optimal_deFi_notes.pdfsync  optimal_deFi_notes.tex  optimal_deFi_notes.toc  optimal_long_short.tex  optimal_long_short_slides.tex  rQUF2e.cls
notebooks/: 01_health_factor_and_leverage.ipynb  02_survival_and_integer_moments.ipynb  03_sizing_frontier_and_drift_views.ipynb  04_kou_calibration_diagnostics.ipynb  README.md  cf_first_hitting_time_demo.ipynb  compare_laplace_vs_mc.ipynb  first_hitting_time_demo.ipynb  fpt_cf_fixB_grid_robust.py  mgf_first_hitting_time_demo.ipynb  new.py  payoff_density.ipynb  stablecoin_short_demo.ipynb  test_laplace_resolvent.ipynb  test_moment.ipynb  test_moments.ipynb  test_root.ipynb
optimal_long_short/: __init__.py  calibration.py  drift.py  inversion.py  kou_model.py  laplace_resolvent.py  market_params.py  model_params.py  moments.py  monte_carlo.py  pdf_approximation.py  risk_report.py  root_finder.py  simulation.py  strategy.py
results/: calibration_DAI_WETH_provided_20260522_212625.json  cir_crossasset_mle_vs_euler.csv  cir_dai_weth_separate.csv  cir_estimates_summary.csv  cir_fitted_params.csv  cir_usdc_weth_aave_v3.csv  diffusion_params.csv  diffusion_params_summary.txt  jcir_usdc_weth_aave_v3.csv  jump_diffusion_fits.csv  params_WBTC_WETH.json  params_WBTC_hourly.json  pot_from_notebook.csv  pot_results.csv
scripts/: calibrate.py  compute_rates_stats.py
src/: Core_CP.py  MC_sim.py  __init__.py  a.env  aave_carry_trade_metrics.csv  aave_v3_carry_trade_analysis.ipynb  beta_neutral.py  calibration.py  cf_first_hitting_time.py  cir_model.py  first_hitting.py  get_aave_hourly_rates.py  gil_pelaez.py  hawkes_process.py  inversion_algorithms.py  log_health.py  mgf_first_hitting_time.py  momentum_strategy.py  monte_carlo.py  params.py  pot.py  riccati_solver.py  simulation.py  stable_strat.py  stablecoin_short_demo.ipynb  stablecoin_short_demo_int_rate.ipynb  utils.py
tests/: __init__.py
(+115 files in other folders)
